in the process;)

--- a/src/index.html
+++ b/src/index.html
@@ -13,30 +13,30 @@
       <header class="header">
         <div class="header__inner">
           <a class="header__logo-link">
-            <img src="images/Logo.png" alt="logo" class="logo" />
+            <img src="images/Logo.svg" alt="logo" class="logo" />
           </a>
           <div class="header__menu">
             <nav class="nav">
               <ul class="nav__list header__nav-list">
-                <li
-                  class="nav__list-item header__nav-item header__menu-item--active"
-                >
-                  <a href="" class="nav__item-link header__nav-item-link"
+                <li class="nav__list-item header__nav-item">
+                  <a
+                    href="#"
+                    class="nav__item-link header__nav-item-link header__nav-item-link--active"
                     >Mobile Top Up</a
                   >
                 </li>
-                <li class="nav__list-item header__nav-item header__menu-item">
-                  <a href="" class="nav__item-link header__nav-item-link"
+                <li class="nav__list-item header__nav-item">
+                  <a href="#" class="nav__item-link header__nav-item-link"
                     >About</a
                   >
                 </li>
-                <li class="nav__list-item header__nav-item header__menu-item">
-                  <a href="" class="nav__item-link header__nav-item-link"
+                <li class="nav__list-item header__nav-item">
+                  <a href="#" class="nav__item-link header__nav-item-link"
                     >Rate</a
                   >
                 </li>
-                <li class="nav__list-item header__nav-item header__menu-item">
-                  <a href="" class="nav__item-link header__nav-item-link"
+                <li class="nav__list-item header__nav-item">
+                  <a href="#" class="nav__item-link header__nav-item-link"
                     >Help</a
                   >
                 </li>
@@ -48,6 +48,26 @@
           </a>
         </div>
       </header>
+      <section class="hero">
+        <div class="hero__inner">
+          <div class="hero__items-column">
+            <h1 class="hero__title">
+              Now Buy Your PIN or Top Up With Bank Transfer
+            </h1>
+            <p class="hero__text">
+              We Make international calling simple, relible, and cheap basedon
+              your unique calling behavior.
+            </p>
+            <a href="#" class="button">
+              <span class="button__name">Get Started</span>
+            </a>
+            <div class="hero__search-w">
+              <input type="text" class="hero__search" />
+            </div>
+            <div class="users"></div>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="js/script.min.js"></script>
   </body>
