--- a/src/index.html
+++ b/src/index.html
@@ -1,110 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.min.css" />
-    <title>Global</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
+<head>
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="css/styles.min.css" />
+   <title>Global</title>
+</head>
+
+<body>
+   <div class="wrapper">
       <header class="header">
-        <div class="header__inner">
-          <a class="header__logo-link">
-            <img src="images/Logo.svg" alt="logo" class="logo" />
-          </a>
-          <div class="header__menu">
-            <nav class="nav">
-              <ul class="nav__list header__nav-list">
-                <li class="nav__list-item header__nav-item">
-                  <a
-                    href="#"
-                    class="nav__item-link header__nav-item-link header__nav-item-link--active"
-                    >Mobile Top Up</a
-                  >
-                </li>
-                <li class="nav__list-item header__nav-item">
-                  <a href="#" class="nav__item-link header__nav-item-link"
-                    >About</a
-                  >
-                </li>
-                <li class="nav__list-item header__nav-item">
-                  <a href="#" class="nav__item-link header__nav-item-link"
-                    >Rate</a
-                  >
-                </li>
-                <li class="nav__list-item header__nav-item">
-                  <a href="#" class="nav__item-link header__nav-item-link"
-                    >Help</a
-                  >
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <a href="#" class="button">
-            <span class="button__name">Sign Up</span>
-          </a>
-        </div>
+         <div class="header__inner">
+            <a class="header__logo-link">
+               <img src="images/Logo.svg" alt="logo" class="logo" />
+            </a>
+            <div class="header__menu">
+               <nav class="nav">
+                  <ul class="nav__list header__nav-list">
+                     <li class="nav__list-item header__nav-item">
+                        <a href="#" class="nav__item-link header__nav-item-link header__nav-item-link--active">Mobile
+                           Top Up</a>
+                     </li>
+                     <li class="nav__list-item header__nav-item">
+                        <a href="#" class="nav__item-link header__nav-item-link">About</a>
+                     </li>
+                     <li class="nav__list-item header__nav-item">
+                        <a href="#" class="nav__item-link header__nav-item-link">Rate</a>
+                     </li>
+                     <li class="nav__list-item header__nav-item">
+                        <a href="#" class="nav__item-link header__nav-item-link">Help</a>
+                     </li>
+                  </ul>
+               </nav>
+            </div>
+            <a href="#" class="button">
+               <span class="button__name">Sign Up</span>
+            </a>
+         </div>
       </header>
       <section class="hero">
-        <div class="hero__inner">
-          <div class="hero__items-column">
-            <h1 class="hero__title">
-              Now Buy Your <br />
-              PIN or <span style="color: #ff8345;">Top Up</span><br />With Bank
-              Transfer
-            </h1>
-            <p class="hero__text">
-              We Make international calling simple, relible, and cheap
-              <br />basedon your unique calling behavior.
-            </p>
-            <a href="#" class="button">
-              <span class="button__name">Get Started</span>
-            </a>
-            <div class="hero__search-w">
-              <input
-                type="text"
-                class="hero__search"
-                placeholder="Where do you want to call?"
-              />
-              <a href="#" class="hero__search-icon">
-                <svg
-                  width="55"
-                  height="55"
-                  viewBox="0 0 55 55"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <rect width="55" height="55" rx="27.5" fill="#48B774" />
-                  <path
-                    d="M26.4267 34.9866C31.1518 34.9866 34.9822 31.1561 34.9822 26.431C34.9822 21.7059 31.1518 17.8755 26.4267 17.8755C21.7015 17.8755 17.8711 21.7059 17.8711 26.431C17.8711 31.1561 21.7015 34.9866 26.4267 34.9866Z"
-                    stroke="white"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M37.1208 37.1252L32.4688 32.4731"
-                    stroke="white"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </a>
+         <div class="hero__inner">
+            <div class="hero__items-column">
+               <h1 class="hero__title"> Now Buy Your <br /> PIN or <span style="color: #ff8345;">Top Up</span><br />With
+                  Bank Transfer</h1>
+               <p class="hero__text">
+                  We Make international calling simple, relible, and cheap
+                  <br />basedon your unique calling behavior.
+               </p>
+               <a href="#" class="button">
+                  <span class="button__name">Get Started</span>
+               </a>
+               <div class="hero__search-w">
+                  <input type="text" class="hero__search" placeholder="Where do you want to call?" />
+                  <a href="#" class="hero__search-icon">
+                     <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="55" height="55" rx="27.5" fill="#48B774" />
+                        <path
+                           d="M26.4267 34.9866C31.1518 34.9866 34.9822 31.1561 34.9822 26.431C34.9822 21.7059 31.1518 17.8755 26.4267 17.8755C21.7015 17.8755 17.8711 21.7059 17.8711 26.431C17.8711 31.1561 21.7015 34.9866 26.4267 34.9866Z"
+                           stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M37.1208 37.1252L32.4688 32.4731" stroke="white" stroke-width="2"
+                           stroke-linecap="round" stroke-linejoin="round" />
+                     </svg>
+                  </a>
+               </div>
+               <div class="hero__users">
+                  <div class="hero__users-icons">
+                     <img src="images/user1.png" alt="User" class="hero__user-icon" />
+                     <img src="images/user2.png" alt="user2" class="hero__user-icon" />
+                     <img src="images/user3.png" alt="user3" class="hero__user-icon" />
+                  </div>
+                  <div class="hero__users-statistics">
+                     45k+ Regular User. View Price Plan
+                  </div>
+               </div>
             </div>
-            <div class="hero__users">
-              <div class="hero__users-icons"></div>
-              <div class="hero__users-statistics">
-                45k+ Regular User. View Price Plan
-              </div>
-            </div>
-          </div>
-        </div>
+         </div>
       </section>
-    </div>
-    <script src="js/script.min.js"></script>
-  </body>
+   </div>
+   <script src="js/script.min.js"></script>
+</body>
+
 </html>
