--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
                   <span class="button__name">Get Started</span>
                </a>
                <div class="hero__search-w">
-                  <input type="text" class="hero__search" placeholder="Where do you want to call?" />
-                  <a href="#" class="hero__search-icon">
+                  <input type="text" class="hero__search" id="search" placeholder="Where do you want to call?" />
+                  <a href="#" class="hero__search-icon search-button">
                      <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="55" height="55" rx="27.5" fill="#48B774" />
                         <path
@@ -64,16 +64,23 @@
                            stroke-linecap="round" stroke-linejoin="round" />
                      </svg>
                   </a>
+                  <p class="hero__search-prompt" id="prompt"></p>
                </div>
                <div class="hero__users">
                   <div class="hero__users-icons">
                      <img src="images/user1.png" alt="User" class="hero__user-icon" />
                      <img src="images/user2.png" alt="user2" class="hero__user-icon" />
                      <img src="images/user3.png" alt="user3" class="hero__user-icon" />
+                     <div class="hero__plus-w">
+                        <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <path d="M9.5 3.95837V15.0417" stroke="white" stroke-width="2" stroke-linecap="round"
+                              stroke-linejoin="round" />
+                           <path d="M3.95703 9.5H15.0404" stroke="white" stroke-width="2" stroke-linecap="round"
+                              stroke-linejoin="round" />
+                        </svg>
+                     </div>
                   </div>
-                  <div class="hero__users-statistics">
-                     45k+ Regular User. View Price Plan
-                  </div>
+                  <p class="hero__users-statistics">45k+ Regular User. View Price Plan</p>
                </div>
             </div>
          </div>
