in the process;)

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
    <div class="wrapper">
       <header class="header">
          <div class="header__inner">
-            <a class="header__logo-link">
+            <a href="#" class="header__logo-link">
                <img src="images/Logo.svg" alt="logo" class="logo" />
             </a>
             <div class="header__menu">
@@ -42,14 +42,14 @@
       </header>
       <section class="hero">
          <div class="hero__inner">
-            <div class="hero__items-column">
+            <div class="hero__items-left">
                <h1 class="hero__title"> Now Buy Your <br /> PIN or <span style="color: #ff8345;">Top Up</span><br />With
                   Bank Transfer</h1>
                <p class="hero__text">
                   We Make international calling simple, relible, and cheap
                   <br />basedon your unique calling behavior.
                </p>
-               <a href="#" class="button">
+               <a href="#" class="button hero__button">
                   <span class="button__name">Get Started</span>
                </a>
                <div class="hero__search-w">
@@ -80,8 +80,17 @@
                         </svg>
                      </div>
                   </div>
-                  <p class="hero__users-statistics">45k+ Regular User. View Price Plan</p>
+                  <div class="hero__users-statistics">45k+ Regular User. <span
+                        class="hero__users-statistics-color-orange">View Price Plan</span></div>
                </div>
+            </div>
+            <div class="hero__items-right">
+               <img src="images/girl.png" alt="girl" class="hero__img">
+               <div class="hero__carousel">
+                  <div class="hero__green-circle"></div>
+
+               </div>
+
             </div>
          </div>
       </section>
