in the process;)

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                </div>
                <div class="hero__users">
                   <div class="hero__users-icons">
-                     <img src="images/user1.png" alt="User" class="hero__user-icon" />
+                     <img src="images/user1.png" alt="User" class="hero__user-icon " />
                      <img src="images/user2.png" alt="user2" class="hero__user-icon" />
                      <img src="images/user3.png" alt="user3" class="hero__user-icon" />
                      <div class="hero__plus-w">
@@ -88,6 +88,11 @@
                <img src="images/girl.png" alt="girl" class="hero__img">
                <div class="hero__carousel">
                   <div class="hero__green-circle"></div>
+                  <img src="images/Britain.svg" alt="Britain" class="hero__flag flag-britain">
+                  <img src="images/Italy.svg" alt="Italy" class="hero__flag flag-italy">
+                  <img src="images/india-big.svg" alt="india" class="hero__flag flag-india">
+                  <img src="images/india.svg" alt="india" class="hero__flag flag-india">
+                  <img src="images/india.svg" alt="india" class="hero__flag flag-india">
                </div>
 
             </div>
